gateway/1.9/modules/ROOT/pages/flex-conn-shared-storage-config.adoc
= Configuring Shared Storage for Flex Gateway in Connected Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-mode: conn

include::reuse::partial$non-inclusive-banner.adoc[]

// intro and graphics for each option - linux, docker, kubernetes
include::partial$task-shared-storage-config.adoc[tags=intro1;intro2;icon-table;byb;linux;sample-config-all-intro]
// configure shared storage for Flex Gateway as a Linux Service
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

// configure shared storage for Flex Gateway in a Docker container
include::partial$task-shared-storage-config.adoc[tags=docker-intro]
+
include::partial$task-reg-run-flex-gateway.adoc[tags=start-command-local]
+
include::partial$task-shared-storage-config.adoc[tags=docker-config-file-step;sample-config-all-intro]
+
include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

//configure shared storage for Flex Gateway in a Kubernetes cluster
include::partial$task-shared-storage-config.adoc[tags=k8s;sample-config-all-intro]

include::partial$task-shared-storage-config.adoc[tags=sample-config-all]

// Secure the Redis password

include::partial$task-shared-storage-config.adoc[tags=secure-password-intro]

include::partial$task-shared-storage-config.adoc[tags=secure-password-k8s]

include::partial$task-shared-storage-config.adoc[tags=secure-password-docker]

// Redis Sentinel

include::partial$task-shared-storage-config.adoc[tags=sentinel-intro]

include::partial$task-shared-storage-config.adoc[tags=sentinel-sample-config]

// TLS
include::partial$task-shared-storage-config.adoc[tags=tls-intro]

include::partial$task-shared-storage-config.adoc[tags=tls-sample-config]

include::partial$task-shared-storage-config.adoc[tags=tls-more-information]

== See Also

* xref:flex-local-shared-storage-config.adoc[Configuring Shared Storage for Flex Gateway in Local Mode]
* xref:flex-local-configuration-reference-guide.adoc#shared-storage[Declarative Configuration Reference Guide]